--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-
-
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -17,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
